2009-02-16  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Look in LOCAL for headers/libs

	* Headers/Foundation/NSObjCRuntime.h: Define NSINTEGER_DEFINED.
	* Headers/Additions/GNUstepBase/GSCategories.h,
	Headers/Additions/GNUstepBase/GSUnion.h: Additional definitions to compile
	with apple-apple-apple.

2009-02-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/pathconfig/configure.ac: Warn if gnustep-config not found.
	* Source/pathconfig/configure: regenerate
	* Headers/Foundation/NSPointerArray.h: Add more comments.

2009-02-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPointerArray.m: Initial implementation.  Untested.
	No coding/decoding support.

2009-02-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPointerFunctions.m: Add some more functions to be set by
	options.

2009-02-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPortCoder.m: Use scanned memory to hold array
	* Source/NSKeyedUnarchiver.m: ditto
	* Source/NSFileManager.m: ditto

2009-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUnarchiver.m:
	* Source/NSString.m:
	* Source/Additions/GSMime.m:
	* Source/NSData.m:
	* Source/GSHTTPAuthentication.m:
	* Source/NSSerializer.m:
	* Source/unix/GSRunLoopCtxt.m:
	* Source/win32/GSRunLoopCtxt.m:
	Various changes to use unscanned collectable memory with GC.

2009-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNotificationCenter.m: Fix bug removing observations for
	collected observers.
	* Headers/Foundation/NSGarbageCollector.h:
	* Source/NSGarbageCollector.m:
	* Source/NSObject.m:
	Update the behavior of the -zone method to match MacOS-X 10.5 and
	always return the default zone when used with GC.

2009-02-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConcretePointerFunctions.h:
	* Source/NSConcretePointerFunctions.m:
	* Source/NSPointerFunctions.m:
	* Source/NSPointerArray.m:
	* Source/GNUmakefile:
	Partial implementation of concrete pointer functions class.
